css/results-page.css
/*----------------------

Input Group Search Container

----------------------*/


.input-group-search {
  display: table;
  width: 100%;
}

.input-group-search .column {
  display: table-cell;
  vertical-align: middle;
}

.input-group-search .column select,
.input-group-search .column input,
.input-group-search .column .btn {
  height: 4.5rem;
}

.input-group-search input[type=text].form-control {
  margin-bottom: 0;
  border-radius: 0;
  border: 1px solid #bbbbbb;	
}

.input-group-search .column .btn {
  box-shadow: none;
  display: flex;
}

.input-group-search .column .btn i {
  font-size: 1.8rem;
}

.input-group-search .column .btn i,
.input-group-search .column .btn span {
  margin: auto;
}

.input-group-search .column .btn i {
  font-size: 13px;
}

.input-group-search .column .btn span {
  font-size: 12px;
}

.input-group-search .column:nth-of-type(1) {
  width: 20%;
}

.input-group-search .column:nth-of-type(1) .btn {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-top: 1px solid #bbbbbb;
  border-bottom:1px solid #bbbbbb;
  border-left: 1px solid #bbbbbb;	
} 

.input-group-search .column:nth-of-type(2) {
  width: 70%;
}

.input-group-search .column:nth-of-type(3) {
  width: 10%;
}

.input-group-search .column:nth-of-type(3) i {
  font-size: 18px;
}


@media (max-width: 991px) {

  .input-group-search .column:nth-of-type(1) {
    width: 0;
  }

  .input-group-search .column:nth-of-type(2) {
    width: 90%;
  }

  .input-group-search .column input {
    font-size: 16px;
  }
}

.input-group-search .column:nth-of-type(3) .btn {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.input-group-search .dropdown-content li > a,
.input-group-search .dropdown-content li > span {
  color: #03a9f4;
}

.input-group-search .dropdown-content li > a:hover {
  text-decoration: none;
}

.input-group-search .column select {
  background-color: #e0e0e0;
  padding: 5px 20px;
  color: #616161;
}

.input-group-search .column select:focus {
  border: 1px solid #03a9f4;
}

/*---Nav Input Group Search Container---*/

nav .nav-wrapper .input-group-search i {
  line-height: normal;
}

nav .input-group-search {
  padding: 10px 0;
}


nav .input-group-search .column {
  line-height: normal;
}

.grey.lighten-3 { 
  color: #484848 ; 

}

@media (min-width: 601px) {
  nav .nav-wrapper .input-group-search i {
    height: inherit;
    line-height: 0;
  }

  nav .input-group-search i,
  nav .input-group-search i.material-icons,
  nav .input-group-search .btn {
    display: initial;
    font-size: 1.8rem;
    height: auto;
    line-height: 0;
  }

}

nav .input-group-search .column:nth-of-type(1) {
  width: 25%;
}


nav .input-group-search .column:nth-of-type(2) {
  width: 70%;
}

nav .input-group-search .column:nth-of-type(3) {
  width: 5%;
}

@media (max-width: 991px) {
  nav .input-group-search .column:nth-of-type(1) {
    display: none;
  }

  nav .input-group-search input[type=text].form-control {
    margin-bottom: 1px;
  }

  .input-group-search .column:nth-of-type(3) i {
    line-height: inherit;
  }

  nav .input-group-search .column:nth-of-type(3) .btn {
    margin-bottom: 1px;
  }

  .global-nav__search .col:last-child {
    padding-left: 0;
  }
	
  .social-media a{
    font-size: 1.4em;
  }


}

/*----------------------

Search Results

----------------------*/

.margin-bottom-0 { margin-bottom: 0; }

h3.results-sub-title {
  font-size: 18px;
  font-weight: bold;
  margin-top: 50px;
}

a.alt-blue {
    background-color: #ebebeb !important;
	box-shadow: unset;
    color: #445963;
    border: 1px solid rgba(0, 0, 0, 0.1);
    max-width: 100%;
	display: block;
}

a.alt-blue:hover{
    background-color: #ddd !important;
    box-shadow: unset;
}

.button-container {
  display: flex;
  margin-top: 25px;
}

.button-container .btn{
  flex: 0 0 50px;
  margin-right: 25px;
}


.btn.round {
  border-radius: 50%;
  padding: 0;
  display: flex;
  width: 50px;
  height: 50px;

}

.btn.round .fa {
  margin: auto;
  font-size: 1.8rem;
  flex: 1;
}

.global-social-login .row {
  margin-bottom: 0;
}

.secondary-links {
  display: table;
}

.secondary-links .column{
  display: table-cell;
  vertical-align: middle;
}


.secondary-links img {
  margin-right: 10px;
}

.md-logo-header {
  height: 30px;
}

.md-logo-header + img {
  margin-bottom: 5px;
}

.md-logo-miamidade {
  vertical-align: super;
}

.social-login-container {
  line-height: 35px;
}

.log-in-out {
  margin-right: 0;
  margin-left: 30px;
 /* border-left: 1px #fff solid; */
  padding-left: 10px;
}

.log-in-out a {
  margin-left: 20px;
}



.global-social-login ul.inline-list {
  font-size: 13px;
  margin: 0 0 0 20px;
}

.global-social-login ul.inline-list,
.global-social-login ul.inline-list li {
  display: inline-block;
}

.global-social-login ul.inline-list li {
  margin-right: 20px;
}

.mobile-logo-container img {
  vertical-align: middle;
}

/*--Tooltip --*/
.material-tooltip {
  font-size: 14px;
}

@media(min-width: 1266px) {
  #mobile-menu {
    display: none;
  }
}

@media(max-width: 1265px) {
  .md-logo-header + img {
    display: none;
  }

  nav .input-group-search .column:nth-of-type(1) {
    display: none;
  }

  nav .input-group-search .column:nth-of-type(2) {
    width: 80%;
  }

  nav .input-group-search .column:nth-of-type(3) {
    width: 20%;
  }

  .log-in-out {
    margin-left: 10px;
  }

  .social-media > ul li:first-child {
    display: none;
  }

  .log-in-out a {
    margin-left: 10px;
  }


  .global-nav-container {
    border-top: 1px solid #ccc;
    box-shadow: inset 0px -11px 8px -10px #CCC;

    display: none;
    position: absolute;
    top: 56px;
    left: 0;
    width: 100%;
    height: 550px;
    z-index: 2;
  }
	
	.global-nav-container {
	border-left:1px #eee solid;	
	}

  .global-nav-container,
  .global-nav-container ul { background-color: #fafafa; }

  .global-nav-container .right,
  .global-nav-container ul li  { float: none !important;}

  .global-nav-container ul li a { color: #03a9f4; }

  /*--Global Menu--*/
  .mobile-menu-bars {
    margin-top: 10px;
    margin-left: 0;
  }

  .mobile-menu-bars div {
    font-size: 12px;
    margin-top: 4px;
  }


}

@media (min-width: 1301px) {
  .hide-on-1301-and-up {
    display: none;
  }
}

@media(max-width: 1300px) {
  .idol-results aside.sidebar {
    display: none;
  }

  .idol-results .mobile-filters aside.sidebar {
    display: block;
  }

  .idol-results main > .col.offset-m1 {
    width: 100% !important;
    margin-left: 0;
  }
}


@media (max-width: 600px) {

  .input-group-search .column select,
  .input-group-search .column input,
  .input-group-search .column .btn {
    height: 3.5rem;
  }  

}

/* --------------------------
featured section
-------------------------- */


#featured-section{
	/*margin-top: -25px;*/
	margin-bottom: 50px;
}

#featured-section p {
	margin-top:5px;
	line-height: 16px;
}

.featured-section-box {
	float: left;
}


.search-suggestion {
	font-weight: bold;
	font-size: 1.5rem;
	/*padding-bottom: 20px;*/
}

.search-suggestion a {
	font-style: italic;
}

h2.results-title {
	font-size: 24px;
    font-weight: bold;
    margin-bottom: 14px;
	margin-top:40px;
}

#related-search {
	margin-top:70px;
	margin-bottom:-15px;
}

h2.search-results-title {
	font-size: 24px;
    font-weight: bold;
    margin-bottom: 14px;
	margin-top:40px;
	margin-bottom:-23px;
}


#related-search li {
	list-style: none;
}

#related-search a {
	font-size: 16px;
	line-height: 30px;
}

.filter-selections {
	padding-bottom: 20px;
}


h2.filter-title {
/*	margin-bottom: 20px;*/
/*    padding-bottom: 12px;*/
	margin: 0 0 10px 0;
    color: #333;
    font-size: 14px;
    font-weight: bold;
    text-transform: uppercase;
    position: relative;
	float:left;
}

.chip {
	padding: 0 9px!important;
	border-radius:5px!important;
	margin-bottom: 6px!important;
    margin-right: 2px!important;
	width: 100%!important;
}

.general-page__title {
    border-bottom: 5px solid #027abb!important;
}


p.show5locations:nth-child(n+7) {    
    opacity: 0; 
    height: 0;
    padding: 0;
    transition: 0.5s ease-out;
}  

p.show5locations2:nth-child(n+7) {
    opacity: 1;
    height: auto;
  /*  padding: 18px 0 4px 0;*/
    transition: 0.5s ease-out;
}  

